--- a/src/Styles/SideNav-style.module.css
+++ b/src/Styles/SideNav-style.module.css
@@ -57,7 +57,6 @@
     cursor: pointer;
     color: #17B794;
     border: none;
-    position: fixed;
-    top: 20px;
-    left: 20px;
+    position: relative;
+    /* left: 20px; */
 }
